Update automatic Java module detection